# DidaAPI

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: deploy.yml
core/: __init__.py  config.py  database.py  urls.py
frontend/: package-lock.json
frontend/docs/: index.md
frontend/docs/.vitepress/: config.mts
frontend/docs/.vitepress/theme/: index.ts
frontend/docs/api/: habits.md  index.md  pomodoros.md  projects.md  statistics.md  url-management.md  users.md
frontend/docs/api/auth/: get-wechat-qrcode.md  index.md  password-login.md  poll-login-status.md  validate-wechat-login.md  wechat-callback.md  wechat-login-flow.md
frontend/docs/api/custom/: export-focus-excel.md  export-tasks-excel.md
frontend/docs/api/habits/: export-habits.md  week-current-statistics.md
frontend/docs/api/pomodoros/: focus-distribution.md  focus-heatmap.md  focus-hour-distribution.md  focus-time-distribution.md  focus-timeline.md
frontend/docs/api/statistics/: general-statistics.md  index.md  task-statistics.md
frontend/docs/api/tasks/: get-all-tasks.md  get-completed-tasks.md  get-tasks-summary.md  get-trash-tasks.md
models/: __init__.py  base.py
routers/: __init__.py  auth.py  export.py  habits.py  pomodoros.py  projects.py  statistics.py  system.py  tasks.py  users.py
services/: __init__.py  dida_service.py  export_service.py  habit_service.py  pomodoro_service.py  project_service.py  statistics_service.py  user_service.py  wechat_service.py
static/: wechat_login.html
utils/: __init__.py  logger.py
(+2 files in other folders)
